--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,121 @@
-/* Empty. Add your own CSS if you like */
+@charset "UTF-8";
+
+@font-face {
+  font-family: "ProjectLinkvan";
+  src: url("../lib/ionic/fonts/ProjectLinkvan.eot");
+  src: url("../lib/ionic/fonts/ProjectLinkvan.eot?#iefix") format("embedded-opentype"), url("../lib/ionic/fonts/ProjectLinkvan.ttf") format("truetype"), url("../lib/ionic/fonts/ProjectLinkvan.woff") format("woff"), url("../lib/ionic/fonts/ProjectLinkvan.woff") format("woff"), url("../lib/ionic/fonts/ProjectLinkvan.svg") format("svg");
+  font-weight: 200}
+
+.icon-Advocacy_linkvan:before {
+content: "\e800";
+font-family: "ProjectLinkvan";
+color: #8f61a8;
+}
+.icon-pets_linkvan:before {
+content: "\e801";
+font-family: "ProjectLinkvan";
+color: #9EA861;
+}
+.icon-phone_linkvan:before {
+content: "\e802";
+font-family: "ProjectLinkvan";
+}
+.icon-shoppingcart_linkvan:before {
+content: "\e803";
+font-family: "ProjectLinkvan";
+}
+.icon-sleepshelter_linkvan:before {
+content: "\e804";
+font-family: "ProjectLinkvan";
+color: #62919C;
+}
+.icon-transgender_linkvan:before {
+content: "\e805";
+font-family: "ProjectLinkvan";
+}
+.icon-hygiene_linkvan:before {
+content: "\e806";
+font-family: "ProjectLinkvan";
+color: #7E7485;
+}
+.icon-id_linkvan:before {
+content: "\e807";
+font-family: "ProjectLinkvan";
+}
+.icon-laundry_linkvan .path1:before {
+content: "\e808";
+color: rgb(0, 0, 0);
+font-family: "ProjectLinkvan";
+}
+.icon-laundry_linkvan .path2:before {
+content: "\e809";
+margin-left: -1em;
+color: rgb(255, 255, 255);
+font-family: "ProjectLinkvan";
+}
+.icon-laundry_linkvan .path3:before {
+content: "\e80a";
+margin-left: -1em;
+color: rgb(0, 0, 0);
+font-family: "ProjectLinkvan";
+}
+.icon-laundry_linkvan .path4:before {
+content: "\e80b";
+margin-left: -1em;
+color: rgb(0, 0, 0);
+font-family: "ProjectLinkvan";
+}
+.icon-Medical_linkvan:before {
+content: "\e80c";
+font-family: "ProjectLinkvan";
+color: #A97A60;
+
+}
+.icon-home3:before {
+content: "\e80d";
+font-family: "ProjectLinkvan";
+}
+.icon-connection:before {
+content: "\e80e";
+font-family: "ProjectLinkvan";
+}
+.icon-cart:before {
+content: "\e80f";
+font-family: "ProjectLinkvan";
+}
+.icon-display:before {
+content: "\e810";
+font-family: "ProjectLinkvan";
+color: #CBAA4B;
+}
+
+
+.food-colour {
+	color: #9EA861;
+}
+
+.crisis-colour {
+	color: #e14228;
+}
+
+.btn-index{
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 20px;
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(white, #EBEBEB);
+}
+
+.btn-index-text{
+  float: left;
+  padding-left: 15px;
+}
+
+.whatservice{
+  font-weight: bold;
+  color: #666
+}
+
+.chevron-index{
+  float: right;
+}
