--- a/www/templates/linkVanHome.html
+++ b/www/templates/linkVanHome.html
@@ -5,14 +5,14 @@
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="search" placeholder="Search Facilities">
             </label>
-            <h5>What service are you looking for?</h5>
-            <a href="#/filtered?category=Shelter" class="button button-stable button-block  icon-left ion-android-happy">Shelter</a>
-            <a href="#/filtered?category=Food" class="button button-stable button-block  icon-left ion-android-happy">Food</a>
-            <a href="#/filtered?category=Medical" class="button button-stable button-block  icon-left ion-android-happy">Medical</a>
-            <a href="#/filtered?category=Hygiene" class="button button-stable button-block  icon-left ion-android-happy">Hygiene</a>
-            <a href="#/filtered?category=Technology" class="button button-stable button-block  icon-left ion-android-happy">Technology</a>
-            <a href="#/filtered?category=Legal" class="button button-stable button-block  icon-left ion-android-happy">Advocacy</a>
-            <a ui-sref="linkVanCrisisLines" class="button button-stable button-block  icon-left ion-android-happy">Crisis Lines</a>
+            <h4 class="whatservice">What service are you looking for?</h4>
+            <a href="#/filtered?category=Shelter" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-sleepshelter_linkvan btn-index "><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Shelter</p></a>
+            <a href="#/filtered?category=Food" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-pets_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Food [replace icon]</p></a>
+            <a href="#/filtered?category=Medical" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-Medical_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Medical</p></a>
+            <a href="#/filtered?category=Hygiene" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-hygiene_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Hygiene</p></a>
+            <a href="#/filtered?category=Technology" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-display btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Technology</p></a>
+            <a href="#/filtered?category=Legal" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-Advocacy_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Advocacy</p></a>
+            <a ui-sref="linkVanCrisisLines" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-pets_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Crisis Lines [replace icon]</p></a>
         </form>
     </ion-content>
 </ion-view>
