fixed directions map to load without refresh!

--- a/www/templates/linkVanAboutUs.html
+++ b/www/templates/linkVanAboutUs.html
@@ -1,4 +1,4 @@
-<ion-view title="LinkVan About Us">
+<ion-view title="About Us">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <h3>About Us</h3>
         <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; background-color: rgb(255, 255, 255);">
