--- a/www/templates/linkVanDisclaimer.html
+++ b/www/templates/linkVanDisclaimer.html
@@ -1,4 +1,4 @@
-<ion-view title="LinkVan Disclaimer">
+<ion-view title="Disclaimer">
     <ion-content overflow-scroll="true" padding="true" scroll="false" class="has-header">
         <h3>Disclaimer</h3>
         <div>
