--- a/www/templates/linkVanShow.html
+++ b/www/templates/linkVanShow.html
@@ -1,4 +1,4 @@
-<ion-view title="LinkVan Show">
+<ion-view title="Facility">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-input" name="Search">
@@ -20,7 +20,7 @@
         <div ng-click="goDirections()">
           <div id="map" data-tap-disabled="true" style="width: 100%; height: 250px"></div>
         </div>
-
+        
         <div class="list card">
             <div class="item item-divider">Contact Information</div>
             <div class="item item-body">
