--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+html, body, #map2 {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+#map2 {
+    position: relative;
+}
+
 @font-face {
   font-family: "ProjectLinkvan";
   src: url("../lib/ionic/fonts/ProjectLinkvan.eot");
