--- a/www/templates/linkVanFiltered.html
+++ b/www/templates/linkVanFiltered.html
@@ -1,4 +1,4 @@
-<ion-view title="LinkVan Filtered">
+<ion-view title="List">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-input" name="Search">
