--- a/www/templates/linkVanHome.html
+++ b/www/templates/linkVanHome.html
@@ -1,4 +1,4 @@
-<ion-view title="LinkVan Home">
+<ion-view title="Home">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-input" name="Search">
