--- a/www/templates/linkVanHome.html
+++ b/www/templates/linkVanHome.html
@@ -6,7 +6,7 @@
                 <input type="search" placeholder="Search Facilities">
             </label>
             <h4 class="whatservice">What service are you looking for?</h4>
-            <a href="#/filtered?category=Shelter" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-sleepshelter_linkvan btn-index "><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Shelter</p></a>
+            <a href="#/filtered?category=Shelter" ng-click="getCategory('Shelter')" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-sleepshelter_linkvan btn-index "><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Shelter</p></a>
             <a href="#/filtered?category=Food" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-pets_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Food [replace icon]</p></a>
             <a href="#/filtered?category=Medical" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-Medical_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Medical</p></a>
             <a href="#/filtered?category=Hygiene" font-family="ProjectLinkvan" class="button button-stable button-block  icon-left icon-hygiene_linkvan btn-index"><i class="icon ion-chevron-right icon-accessory chevron-index"></i><p class="btn-index-text">Hygiene</p></a>
